# dbf2sql-uploader

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  run_dramatiq.cmd  run_dramatiq.ps1  run_scheduler.ps1  run_sheduler.cmd
src/: _.txt
src/apps/armexport/: apps.py  models.py
src/apps/armimport/: apps.py  models.py  resources.py
src/apps/common/: dataclasses.py  functions.py  mixins.py
src/apps/core/: admin.py  apps.py  classes.py  filters.py  forms.py  functions.py  managers.py  models.py  tasks.py  urls.py  validators.py  views.py
src/apps/dbfexport/: apps.py  mixins.py  models.py
src/apps/navision/: apps.py  models.py
src/apps/nsiexport/: apps.py  models.py
src/apps/nsimport/: apps.py  models.py  resources.py
src/apps/sqlimport/: admin.py  apps.py  mixins.py  models.py  resources.py
src/apps/task_scheduler/: apps.py  cron.py  periodic_tasks.py  run_cron.py  tasks.py
src/config/: celery.py  cli.py  dramatiq.py  email.py  env.py  jazzmin.py  loggers.py  routers.py  settings.py  settings_manager.py  setup.py  urls.py  wsgi.py
src/db/connection/: connects.py  odbc.py
src/services/: armcount.py  armimport.py  armlocal.py  dataclasses.py  dbfcount.py  middleware.py  sqlcount.py  sqlimport.py  sqllocal.py  updatelocal.py
src/services/base/: baseimport.py
src/uploader/: upload.py
src/uploader/bulkxmlload/: dataclasses.py  schema.py  xmldata.py  xmlload.py  xsdschema.py
src/uploader/core/: exceptions.py
src/uploader/xmldata/: XML_TABLE_DBF_TYPES.xml  XML_TABLE_DBF_TYPES.xsd  ee.prg  (+4 more)
src/utils/: miscs.py
(+47 files in other folders)
